<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Database</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">增加联系人</string>
    <string name="confirm">删除该条记录？</string>
    <string name="change">编辑联系人</string>
    <string name="cancel">取消</string>
    <string name="update">更新</string>
    <string name="name">姓名</string>
    <string name="ssn">学号</string>
    <string name="_class">班级</string>
    <string name="phone">手机</string>

</resources>
